--- a/calculator/style.css
+++ b/calculator/style.css
@@ -8,7 +8,7 @@ table{
 
 input{
     border-radius: 21px;
-    border: 5px solid #244624;
+    border: 5px solid #31bd31;
     font-size: 34px;
     height: 65px;
     width: 456px;
